[tool.poetry]
name = "adventofcode2023"
description = ""
readme = "README.md"
authors = ["Alexander Sandukovskiy"]
version = "1.0"

[tool.poetry.dependencies]
python = "^3.8"
pyright = "^1.1.339"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
